# arxiv-rag-research-assistant

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ui_ux_design_system.md
.github/workflows/: ci.yml  docker-build.yml
app/: __init__.py  config.py
app/api/: __init__.py  main.py  schemas.py
app/api/routes/: __init__.py  evaluate.py  ingest.py  query.py
app/embeddings/: __init__.py  embedding_factory.py
app/evaluation/: __init__.py  ragas_evaluator.py  run_benchmark.py  test_dataset.py
app/generation/: __init__.py  prompt_templates.py  rag_chain.py
app/ingestion/: __init__.py  arxiv_loader.py  chunkers.py  pdf_parser.py
app/retrieval/: __init__.py  dense_retriever.py  hybrid_retriever.py  sparse_retriever.py
docker/: Dockerfile.api  Dockerfile.frontend
frontend/: streamlit_app.py
notebooks/: 01_data_exploration.ipynb  02_chunking_benchmark.ipynb  03_ragas_results_viz.ipynb
results/: benchmark_results.csv
tests/: test_api.py  test_arxiv_loader.py  test_chunkers.py  test_embeddings.py  test_pdf_parser.py  test_rag_chain.py  test_retrievers.py
