[project]
name = "arxiv-rag-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "arxiv==2.1.*",
    "chromadb==0.5.*",
    "datasets==2.*",
    "fastapi==0.115.*",
    "langchain==0.3.*",
    "langchain-community==0.3.*",
    "langchain-experimental==0.3.*",
    "langchain-huggingface==0.1.*",
    "langchain-openai==0.2.*",
    "matplotlib==3.9.*",
    "nltk==3.9.*",
    "pydantic==2.*",
    "pymupdf==1.24.*",
    "python-dotenv>=1.2.2",
    "ragas==0.2.*",
    "rank-bm25==0.2.2",
    "streamlit==1.40.*",
    "tiktoken==0.7.*",
    "uvicorn==0.30.*",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".github/prompts", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
markers = [
    "integration: requires external services (e.g. Chroma)",
]
